# shnet_library

./: Readme.md  pyproject.toml
.github/workflows/: publish.yml
examples/: xor.py
shnet/: __init__.py  data.py  layers.py  loss.py  nn.py  optim.py  tensor.py  train.py
shnet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
